[package]
name = "bc-rand"
version = "0.4.1"
edition = "2024"
description = "Blockchain Commons Random Number Utilities."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-rand-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-rand"
keywords = ["random", "testing", "security"]                     # Up to five
categories = ["algorithms"]                                      # https://crates.io/category_slugs

[dependencies]
rand = "^0.8.5"
rand_core = "0.6.4"
getrandom = "^0.2.9"
rand_xoshiro = "^0.6.0"
num-traits = "^0.2.15"
lazy_static = "^1.4.0"

[dev-dependencies]
hex-literal = "^0.4.1"
version-sync = "^0.9"
